--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Bead You UP Designs</title>
+    <title>Bead U UP Designs</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -375,12 +375,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-06.jpg"
+                      src="assets/images/portfolio-07.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-06.jpg"
+                        href="assets/images/portfolio-07.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -393,12 +393,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-06.jpg"
+                      src="assets/images/portfolio-08.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-06.jpg"
+                        href="assets/images/portfolio-08.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -411,12 +411,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-06.jpg"
+                      src="assets/images/portfolio-09.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-06.jpg"
+                        href="assets/images/portfolio-09.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -429,12 +429,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-06.jpg"
+                      src="assets/images/portfolio-10.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-06.jpg"
+                        href="assets/images/portfolio-10.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
