--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              > aosckao aosicjnaoisa oaiofianoen aoaidvjoaisjo aoiscj aosicjoa as oijaoisovi asoiv aoivaosi vaosi voaivjoaisjv oaisvaosivj aosijv aoisv asoivjaoijv aosv aisvj oasvoa </span
+              > I'm a tattoo artist, jewelry designer, and all around artistic person. My current passion is designing and making glass seed bead earrings with porcupine quills, buckskin and gemstones. I love traditional Native American beaded earrings and learned how to bead from someone who is of Ute heritage. I sell my work at art fairs and online and will do  custom work. I’m currently based in Colorado. </span
             >
           </div>
           <div class="left-image-post">
@@ -97,17 +97,9 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Section 1</h4>
+                  <h4>Lots of styles!</h4>
                   <p>
-                    Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero. Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+                    Bright colors, earth tones, down to your shoulders or short loops - you choose the length and color scheme! 
                   </p>
                  <!-- <div class="white-button">
                     <a href="#">Read More</a>
@@ -120,21 +112,9 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Sed sagittis rhoncus velit</h4>
+                  <h4>Lotsofcolors!</h4>
                   <p>
-                    Pellentesque habitant morbi tristique senectus et netus et
-                    malesuada fames ac turpis egestas. Vestibulum fermentum
-                    eleifend nibh, vitae sodales elit finibus pretium.
-                    Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                    semper.Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+                    Classic glass seed beads on their own, combined with porcupine quills and/or gemstones. More silver or less. You choose!
                   </p>
                   <!--<div class="white-button">
                     <a href="#">Read More</a>
@@ -157,9 +137,8 @@ https://templatemo.com/tm-531-reflux
             <h2>About the Earrings</h2>
             <div class="line-dec"></div>
             <span
-              >Curabitur leo felis, rutrum vitae varius eu, malesuada a tortor.
-              Vestibulum congue leo et tellus aliquam, eu viverra nulla semper.
-              Nullam eu faucibus diam. Donec eget massa ante.</span
+              >My earrings come in a variety of lengths and colors and can include porcupine quills, metal cones, buckskin and gemstones. The images on this website are illustrative only since the exact earrings may have already been sold. 
+Prices vary based on the complexity of design and if gemstones are included but range from $20 - $45. </span
             >
           </div>
           <div class="row">
@@ -177,7 +156,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="second-service-icon service-icon"></div>
                 <h4>Colors</h4>
                 <p>
-                  Available through Etsy, at craft fairs, and through email.
+                  All colors of the rainbow! Available through Etsy, at craft fairs, and direct through email.
                 </p>
               </div>
             </div>
@@ -186,9 +165,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="third-service-icon service-icon"></div>
                 <h4>Earring Styles</h4>
                 <p>
-                  Integer suscipit condimentum aliquet. Nam quis risus metus.
-                  Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
-                  dui.
+                  My earrings can be longer or shorter, depending on your preference. They can include your favorite colors or gemstones.They are each one of a kind. 
                 </p>
               </div>
             </div>
@@ -197,9 +174,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="fourth-service-icon service-icon"></div>
                 <h4>Custom Requests</h4>
                 <p>
-                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                  leo nec felis porttitor.
+                  If you see earrings you’d like to purchase or would like to place a custom order (or have any other questions), please email me at namc36@comcast.net                  
                 </p>
               </div>
             </div>
@@ -213,9 +188,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Pictures</h2>
             <div class="line-dec"></div>
             <span
-              >Aenean sollicitudin ex mauris, lobortis lobortis diam euismod sit
-              amet. Duis ac elit vulputate, lobortis arcu quis, vehicula
-              mauris.</span
+              >Below are just examples of some of the many designs I can create. </span
             >
           </div>
           <div class="row">
@@ -456,21 +429,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Contact/Order</h2>
             <div class="line-dec"></div>
             <span
-              >Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit.Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit.</span
+              >If you see earrings you’d like to purchase or would like to place a custom order (or have any other questions), please email me at namc36@comcast.net - you can just hit the link below!</span
             >
           <!--</div>
           <div class="row">
