--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Lotsofcolors!</h4>
+                  <h4>Lots of colors!</h4>
                   <p>
                     Classic glass seed beads on their own, combined with porcupine quills and/or gemstones. More silver or less. You choose!
                   </p>
@@ -138,7 +138,7 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
             <span
               >My earrings come in a variety of lengths and colors and can include porcupine quills, metal cones, buckskin and gemstones. The images on this website are illustrative only since the exact earrings may have already been sold. 
-Prices vary based on the complexity of design and if gemstones are included but range from $20 - $45. </span
+Prices vary based on the complexity of design and if gemstones are included, but range from $20 - $45. </span
             >
           </div>
           <div class="row">
@@ -165,7 +165,7 @@ Prices vary based on the complexity of design and if gemstones are included but 
                 <div class="third-service-icon service-icon"></div>
                 <h4>Earring Styles</h4>
                 <p>
-                  My earrings can be longer or shorter, depending on your preference. They can include your favorite colors or gemstones.They are each one of a kind. 
+                  My earrings can be longer or shorter, depending on your preference. They can include your favorite colors or gemstones. They are each one of a kind. 
                 </p>
               </div>
             </div>
@@ -242,8 +242,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>First Title</h4>
-                      <span>asodnaosdnoa aosdinaosid </span>
+                      <!--<h4>First Title</h4>
+                      <span>asodnaosdnoa aosdinaosid </span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -261,8 +261,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Second Title</h4>
-                      <span>asdio aosidnasi oaisn </span>
+                      <!--<h4>Second Title</h4>
+                      <span>asdio aosidnasi oaisn </span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -280,8 +280,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Item Third</h4>
-                      <span>aosidn aosidn aosidn aosi </span>
+                      <!--<h4>Item Third</h4>
+                      <span>aosidn aosidn aosidn aosi </span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -299,8 +299,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Item Fourth</h4>
-                      <span>oasidn aosidn aosidn aoisnd </span>
+                      <!--<h4>Item Fourth</h4>
+                      <span>oasidn aosidn aosidn aoisnd </span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -318,8 +318,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Fifth Awesome</h4>
-                      <span>aosidj aosidj aosidna</span>
+                      <!--<h4>Fifth Awesome</h4>
+                      <span>aosidj aosidj aosidna</span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -337,8 +337,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Awesome Sixth</h4>
-                      <span>Donec eget massa ante</span>
+                      <!--<h4>Awesome Sixth</h4>
+                      <span>Donec eget massa ante</span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -358,8 +358,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Awesome Sixth</h4>
-                      <span>Donec eget massa ante</span>
+                      <!--<h4>Awesome Sixth</h4>
+                      <span>Donec eget massa ante</span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -376,8 +376,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Awesome Sixth</h4>
-                      <span>Donec eget massa ante</span>
+                      <!--<h4>Awesome Sixth</h4>
+                      <span>Donec eget massa ante</span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -394,8 +394,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Awesome Sixth</h4>
-                      <span>Donec eget massa ante</span>
+                      <!--<h4>Awesome Sixth</h4>
+                      <span>Donec eget massa ante</span>-->
                     </figcaption>
                   </figure>
                 </div>
@@ -412,8 +412,8 @@ Prices vary based on the complexity of design and if gemstones are included but 
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Awesome Sixth</h4>
-                      <span>Donec eget massa ante</span>
+                      <!--<h4>Awesome Sixth</h4>
+                      <span>Donec eget massa ante</span>-->
                     </figcaption>
                   </figure>
                 </div>
