--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
                 >
               </form>
               <div class="isotope-box">
-                <div class="isotope-item" data-type="nature">
+                <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-01.jpg"
@@ -267,7 +267,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="animals">
+                <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-03.jpg"
@@ -324,7 +324,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
                   </figure>
                 </div>
 
-                <div class="isotope-item" data-type="animals">
+                <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-06.jpg"
@@ -345,7 +345,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
 
                 <!-- Copying more-->
 
-                <div class="isotope-item" data-type="animals">
+                <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-07.jpg"
@@ -363,7 +363,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
                     </figcaption>
                   </figure>
                 </div>
-                <div class="isotope-item" data-type="animals">
+                <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-08.jpg"
@@ -381,7 +381,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
                     </figcaption>
                   </figure>
                 </div>
-                <div class="isotope-item" data-type="animals">
+                <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-09.jpg"
@@ -399,7 +399,7 @@ Prices vary based on the complexity of design and if gemstones are included, but
                     </figcaption>
                   </figure>
                 </div>
-                <div class="isotope-item" data-type="animals">
+                <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
                       src="assets/images/portfolio-10.jpg"
